# recall

./: Dockerfile  Dockerfile.dev  PLAN.md  README.md  compose.dev.yml  compose.yml  docker-compose.yml  pyproject.toml  tabledef.sql
db/: Dockerfile  create-multiple-postgresql-databases.sh  init.sql  sample_data.sql  tabledef.sql
src/prevent/: aios.py  app.py  dapp.py  data.py  db.py  downloader.py  forms.py  layout.py  models.py  terradarcotta.py  utils.py  visuals.py
src/prevent/database/: __init__.py  models.py  queries.py
src/prevent/templates/: base.html  event_view.html  main_view.html
src/prevent/terracotta/: ingest.py
src/recall/: aios.py  app.py  dapp.py  layout.py  visuals.py
src/recall/callbacks/: events.py  maintenance.py  map.py  tags.py
src/recall/database/: connection.py  models.py  queries.py
src/recall/debug/: tcdatasets.py
src/recall/terracotta/: client.py  ingest.py
src/scripts/: map.py
terracotta/: Dockerfile  gen_cmaps.py  requirements.txt  run.sh
