[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "recall"
dynamic = ["version"]
description = 'Radar Event Catalog and Archive Lookup Library'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jussi Tiira", email = "jussi.tiira@fmi.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dash-leaflet",
  "gunicorn",
  "celery[redis]",
  "terracotta",
  "boto3",
  "dash",
  "flask_sqlalchemy",
  "flask_migrate",
  "geoalchemy2",
  "psycopg2-binary",
  "dash-bootstrap-components",
  "matplotlib",
  "tomli-w",
]

[project.scripts]
recall = "recall.app:main"

[project.urls]
#Documentation = "https://github.com/Jussi Tiira/recall#readme"
#Issues = "https://github.com/Jussi Tiira/recall/issues"
#Source = "https://github.com/Jussi Tiira/recall"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "secrets.py",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/recall tests}"

[tool.coverage.run]
source_pkgs = ["recall", "tests"]
branch = true
parallel = true
omit = [
]

[tool.coverage.paths]
recall = ["src/recall", "*/recall/src/recall"]
tests = ["tests", "*/recall/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
